// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginSetup app initialized with topnavbar = false 1`] = `
<div>
  <div>
    hello
  </div>
</div>
`;

exports[`PluginSetup app initialized with topnavbar = true 1`] = `
<div>
  <div>
    hello
  </div>
</div>
`;

exports[`PluginSetup app is loading 1`] = `
<div>
  <div>
    hello
  </div>
</div>
`;

exports[`PluginSetup app successfully initialized 1`] = `
<div>
  <div>
    hello
  </div>
</div>
`;

exports[`PluginSetup currently undergoing maintenance 1`] = `
<div>
  <div
    class="spin"
  >
    <img
      alt="Grafana OnCall Logo"
      src="[object Object]"
    />
    <div
      class="spin-text"
    >
      there is some sort of maintenance
    </div>
  </div>
</div>
`;

exports[`PluginSetup there is an error message - retry setup 1`] = `
<div>
  <div
    class="spin"
  >
    <img
      alt="Grafana OnCall Logo"
      src="[object Object]"
    />
    <div
      class="spin-text"
    >
      ohhhh noo
    </div>
    <div
      class="configure-plugin"
    >
      <div
        class="css-ffyaiw-horizontal-group"
        style="width: 100%; height: 100%;"
      >
        <div
          class="css-18qv8yz-layoutChildrenWrapper"
        >
          <button
            class="css-72lnkn-button"
            type="button"
          >
            <span
              class="css-1riaxdn"
            >
              Retry
            </span>
          </button>
        </div>
        <div
          class="css-18qv8yz-layoutChildrenWrapper"
        >
          <a
            class="css-72lnkn-button"
            href="/plugins/grafana-oncall-app?page=configuration"
            tabindex="0"
          >
            <span
              class="css-1riaxdn"
            >
              Configure Plugin
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginSetup there is an error message 1`] = `
<div>
  <div
    class="spin"
  >
    <img
      alt="Grafana OnCall Logo"
      src="[object Object]"
    />
    <div
      class="spin-text"
    >
      ohhhh noo
    </div>
    <div
      class="configure-plugin"
    >
      <div
        class="css-ffyaiw-horizontal-group"
        style="width: 100%; height: 100%;"
      >
        <div
          class="css-18qv8yz-layoutChildrenWrapper"
        >
          <button
            class="css-72lnkn-button"
            type="button"
          >
            <span
              class="css-1riaxdn"
            >
              Retry
            </span>
          </button>
        </div>
        <div
          class="css-18qv8yz-layoutChildrenWrapper"
        >
          <a
            class="css-72lnkn-button"
            href="/plugins/grafana-oncall-app?page=configuration"
            tabindex="0"
          >
            <span
              class="css-1riaxdn"
            >
              Configure Plugin
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
